--- a/Views/Account/Success.cshtml
+++ b/Views/Account/Success.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h2>@ViewBag.Title.</h2>
 <div>
     <p>
         Thank you for register. Activation link has been sent to your email.
