--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Student", "Index", "Student", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Blog", "Index", "Student", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Admin", "Index", "Home", new { area = "Admin" }, null)</li>
                     <li>@Html.ActionLink("Employee", "Index", "Home", new { area = "Employee" }, null)</li>
                 </ul>
