add user manager

--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -5,4 +5,9 @@
 }
 
 <h2>Admin Index</h2>
+<p>
+    @Html.ActionLink("Blog List", "Index", "Students", new { area = "Admin" }, null) |
+    @Html.ActionLink("User Manager", "Index", "Users", new { area = "Admin" }, null)
+</p>
+
 
