--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -30,13 +30,13 @@
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
+
              See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
+
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        @*
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None") [
@@ -80,5 +80,21 @@
                     }
                 }*@
         </dd>
+    </dl>
+
+    <h4>Change your account profles</h4>
+    <p>
+        @Html.ActionLink("Edit Profiles", "Edit", new { id = Model.CurrentUser.Id })
+    </p>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>@Html.DisplayNameFor(model => model.CurrentUser.HomeTown)</dt>
+        <dd>@Html.DisplayFor(model => model.CurrentUser.HomeTown)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.CurrentUser.BirthDate)</dt>
+        <dd>@Html.DisplayFor(model => model.CurrentUser.BirthDate)</dd>
+
+        <dt>@Html.DisplayNameFor(model => model.CurrentUser.PhoneNumber)</dt>
+        <dd>@Html.DisplayFor(model => model.CurrentUser.PhoneNumber)</dd>
     </dl>
 </div>
