add customer list

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Blog", "Index", "Student", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Admin", "Index", "Home", new { area = "Admin" }, null)</li>
-                    <li>@Html.ActionLink("Employee", "Index", "Home", new { area = "Employee" }, null)</li>
+                    <li>@Html.ActionLink("Member", "Index", "Home", new { area = "Employee" }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
