--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -82,7 +82,7 @@
         </dd>
     </dl>
 
-    <h4>Change your account profles</h4>
+    <h4>Change your account profiles</h4>
     <p>
         @Html.ActionLink("Edit Profiles", "Edit", new { id = Model.CurrentUser.Id })
     </p>
@@ -97,4 +97,52 @@
         <dt>@Html.DisplayNameFor(model => model.CurrentUser.PhoneNumber)</dt>
         <dd>@Html.DisplayFor(model => model.CurrentUser.PhoneNumber)</dd>
     </dl>
+
+    <h4>Customer List</h4>
+
+    <p>
+        @Html.ActionLink("Add New", "AddNewCus")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CurrentUser.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CurrentUser.PhoneNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CurrentUser.HomeTown)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CurrentUser.BirthDate)
+            </th>
+            <th></th>
+        </tr>
+
+       
+        @foreach (var item in Model.ChildList)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HomeTown)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BirthDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
 </div>
