--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -101,7 +101,7 @@
     <h4>Customer List</h4>
 
     <p>
-        @Html.ActionLink("Add New", "AddNewCus")
+        @Html.ActionLink("Add New", "CreateCus")
     </p>
     <table class="table">
         <tr>
