--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -13,7 +13,10 @@
                 <div class="content-page">
                     <div class="row">
                         <div class="col-md-12">
-                            <div id="map" class="gmaps margin-bottom-40" style="height:400px;"></div>
+                            <div id="map" class="gmaps margin-bottom-40" style="height:400px;">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63752.24744191615!2d101.7265776396571!3d2.9543644491350562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdcbd32f300b1d%3A0xbc8b1c2b2792e85e!2sBandar+Baru+Bangi%2C+Selangor!5e0!3m2!1sen!2smy!4v1486056798469" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+                            </div>
                         </div>
                         <div class="col-md-9 col-sm-9">
                             <h2>Contact Form</h2>
@@ -57,13 +60,6 @@
                                 <li><a href="#" data-original-title="Goole Plus" class="googleplus"></a></li>
                                 <li><a href="#" data-original-title="linkedin" class="linkedin"></a></li>
                                 <li><a href="#" data-original-title="rss" class="rss"></a></li>
-                            </ul>
-                            <h2 class="padding-top-30">About Us</h2>
-                            <p>Sediam nonummy nibh euismod tation ullamcorper suscipit</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check"></i> Officia deserunt molliti</li>
-                                <li><i class="fa fa-check"></i> Consectetur adipiscing </li>
-                                <li><i class="fa fa-check"></i> Deserunt fpicia</li>
                             </ul>
                         </div>
                     </div>
