--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MVC5.Common
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -77,8 +78,8 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+1 456 6717</span></li>
-                        <li><i class="fa fa-envelope-o"></i><span>info@keenthemes.com</span></li>
+                        <li><i class="fa fa-phone"></i><span>+60 10862 0466</span></li>
+                        <li><i class="fa fa-envelope-o"></i><span>info@nadikebangsaan.com</span></li>
                     </ul>
                 </div>
                 <!-- END TOP BAR LEFT PART -->
@@ -92,7 +93,7 @@
     <!-- BEGIN HEADER -->
     <div class="header">
         <div class="container">
-            <a class="site-logo" href="index.html"><img src="~/Content/assets/frontend/layout/img/logos/logo-corp-red.png" alt="Metronic FrontEnd"></a>
+            <a class="site-logo" href="@MyConstant.Base_Url"><img src="~/Content/assets/frontend/layout/img/logos/logo-corp-red.png" alt="Metronic FrontEnd"></a>
             <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
             <!-- BEGIN NAVIGATION -->
             <div class="header-navigation pull-right font-transform-inherit">
@@ -108,15 +109,18 @@
                     <li>
                         @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, null)
                     </li>
-                    <li>
+                    @*<li>
                         @Html.ActionLink("Blog", "Index", "Student", new { area = "" }, null)
-                    </li>
-                    <li>
+                    </li>*@
+                    @*<li>
                         @Html.ActionLink("Admin", "Index", "Home", new { area = "Admin" }, null)
-                    </li>
+                    </li>*@
+@if (Request.IsAuthenticated)
+{
                     <li>
-                        @Html.ActionLink("Member", "Index", "Home", new { area = "Employee" }, null)
+                        @Html.ActionLink("Member Area", "Index", "Home", new { area = "Employee" }, null)
                     </li>
+}
 
                     <!-- BEGIN TOP SEARCH -->
                     <li class="menu-search">
