--- a/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Views/Account/ExternalLoginConfirmation.cshtml
@@ -25,17 +25,10 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.HomeTown, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Introducer, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.HomeTown, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.HomeTown)
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.BirthDate, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.BirthDate)
+            @Html.TextBoxFor(m => m.Introducer, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Introducer)
         </div>
     </div>
     <div class="form-group">
