--- a/Views/Transaction/Success.cshtml
+++ b/Views/Transaction/Success.cshtml
@@ -5,10 +5,9 @@
 }
 
 <h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        @ViewBag.Message
-    </p>
+<p>@ViewBag.callbackUrl</p>
+<a href="@ViewBag.callbackUrl">Click This Link or scan To Get Point</a>
+<div> 
     <img src="/Transaction/BarcodeImage?barcodeText=@ViewBag.callbackUrl" />
 </div>
 
