--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -63,6 +63,9 @@
             </p>
             <hr />
             <dl class="dl-horizontal">
+                <dt>@Html.DisplayNameFor(model => model.wallet) :</dt>
+                <dd>@Html.DisplayFor(model => model.wallet)</dd>
+
                 <dt>@Html.DisplayNameFor(model => model.CurrentUser.ParentId) :</dt>
                 <dd>@Html.DisplayFor(model => model.CurrentUser.ParentId)</dd>
 
