--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -61,6 +61,9 @@
             <p>
                 @Html.ActionLink("Edit Profiles", "Edit", new { id = Model.CurrentUser.Id })
             </p>
+            <p>
+                @Html.ActionLink("Apply Membership", "ApplyMembership")
+            </p>
             <hr />
             <dl class="dl-horizontal">
                 <dt>@Html.DisplayNameFor(model => model.wallet) :</dt>
