--- a/Views/Account/ConfirmEmail.cshtml
+++ b/Views/Account/ConfirmEmail.cshtml
@@ -4,7 +4,10 @@
 
 <h2>@ViewBag.Title.</h2>
 <div>
-    <p>
+    @*<p>
         Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    </p>*@
+    <p>
+        New user membership approve by Admin!
     </p>
 </div>
