--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -66,6 +66,12 @@
             </p>
             <hr />
             <dl class="dl-horizontal">
+                <dt>@Html.DisplayNameFor(model => model.userLink) :</dt>
+                <dd>@Html.DisplayFor(model => model.userLink)</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.potentialPoint) :</dt>
+                <dd>@Html.DisplayFor(model => model.potentialPoint)</dd>
+
                 <dt>@Html.DisplayNameFor(model => model.wallet) :</dt>
                 <dd>@Html.DisplayFor(model => model.wallet)</dd>
 
