--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
         js.src = "//connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+
+
+    
     </script>
 
 </head>
@@ -54,7 +57,7 @@
         }(document, 'script', 'facebook-jssdk'));</script>
 
 
-    
+
     <!-- END BEGIN STYLE CUSTOMIZER -->
     <!-- BEGIN TOP BAR -->
     <div class="pre-header">
@@ -101,22 +104,7 @@
                         </li>
                     }
 
-                    <!-- BEGIN TOP SEARCH -->
-                    <li class="menu-search">
-                        <span class="sep"></span>
-                        <i class="fa fa-search search-btn"></i>
-                        <div class="search-box">
-                            <form action="#">
-                                <div class="input-group">
-                                    <input type="text" placeholder="Search" class="form-control">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-primary" type="submit">Search</button>
-                                    </span>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
-                    <!-- END TOP SEARCH -->
+
                 </ul>
             </div>
             <!-- END NAVIGATION -->
@@ -130,102 +118,106 @@
         <div class="container">
             @RenderBody()
         </div>
-    </div>
-
-    <!-- BEGIN PRE-FOOTER -->
-    <div class="pre-footer">
         <div class="container">
             <div class="row">
-                <!-- BEGIN BOTTOM ABOUT BLOCK -->
-                <div class="col-md-4 col-sm-6 pre-footer-col">
-                    <h2>About us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam sit nonummy nibh euismod tincidunt ut laoreet dolore magna aliquarm erat sit volutpat.</p>
-
-                </div>
-                <!-- END BOTTOM ABOUT BLOCK -->
-                <!-- BEGIN BOTTOM CONTACTS -->
-                <div class="col-md-4 col-sm-6 pre-footer-col">
-                    <h2>Our Contacts</h2>
-                    <address class="margin-bottom-40">
-                        35, Lorem Lis Street, Park Ave<br>
-                        California, US<br>
-                        Phone: 300 323 3456<br>
-                        Fax: 300 323 1456<br>
-                        Email: <a href="mailto:info@metronic.com">info@metronic.com</a><br>
-                        Skype: <a href="skype:metronic">metronic</a>
-                    </address>
-
-                </div>
-                <!-- END BOTTOM CONTACTS -->
-                <div class="col-md-4 col-sm-6 pre-footer-col">
-                    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-
+                <div class="col-md-12 col-sm-12">
+                    <div class="content-page">
+                        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- END PRE-FOOTER -->
-    <!-- BEGIN FOOTER -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <!-- BEGIN COPYRIGHT -->
-                <div class="col-md-6 col-sm-6 padding-top-10">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-                </div>
-                <!-- END COPYRIGHT -->
-                <!-- BEGIN PAYMENTS -->
-                <div class="col-md-6 col-sm-6">
-                    <ul class="social-footer list-unstyled list-inline pull-right">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dropbox"></i></a></li>
-                    </ul>
-                </div>
-                <!-- END PAYMENTS -->
             </div>
         </div>
-    </div>
-    <!-- END FOOTER -->
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-    <!-- Load javascripts at bottom, this will reduce page load time -->
-    <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
-    <!--[if lt IE 9]>
-    <script src="~/Content/assets/global/plugins/respond.min.js"></script>
-    <![endif]-->
-    <script src="~/Content/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/frontend/layout/scripts/back-to-top.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
-    <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="~/Content/assets/global/plugins/carousel-owl-carousel/owl-carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
-    <!-- BEGIN RevolutionSlider -->
+    
+                <!-- BEGIN PRE-FOOTER -->
+                <div class="pre-footer">
+                    <div class="container">
+                        <div class="row">
+                            <!-- BEGIN BOTTOM ABOUT BLOCK -->
+                            <div class="col-md-4 col-sm-6 pre-footer-col">
+                                <h2>About us</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam sit nonummy nibh euismod tincidunt ut laoreet dolore magna aliquarm erat sit volutpat.</p>
 
-    <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
-    <script src="~/Content/assets/frontend/pages/scripts/revo-slider-init.js" type="text/javascript"></script>
-    <!-- END RevolutionSlider -->
-    <script src="~/Content/assets/frontend/layout/scripts/layout.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function () {
-            Layout.init();
-            Layout.initOWL();
-            RevosliderInit.initRevoSlider();
-            Layout.initTwitter();
-            //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
-            //Layout.initNavScrolling();
-        });
-    </script>
+                            </div>
+                            <!-- END BOTTOM ABOUT BLOCK -->
+                            <!-- BEGIN BOTTOM CONTACTS -->
+                            <div class="col-md-4 col-sm-6 pre-footer-col">
+                                <h2>Our Contacts</h2>
+                                <address class="margin-bottom-40">
+                                    35, Lorem Lis Street, Park Ave<br>
+                                    California, US<br>
+                                    Phone: 300 323 3456<br>
+                                    Fax: 300 323 1456<br>
+                                    Email: <a href="mailto:info@metronic.com">info@metronic.com</a><br>
+                                    Skype: <a href="skype:metronic">metronic</a>
+                                </address>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END PRE-FOOTER -->
+                <!-- BEGIN FOOTER -->
+                <div class="footer">
+                    <div class="container">
+                        <div class="row">
+                            <!-- BEGIN COPYRIGHT -->
+                            <div class="col-md-6 col-sm-6 padding-top-10">
+                                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                            </div>
+                            <!-- END COPYRIGHT -->
+                            <!-- BEGIN PAYMENTS -->
+                            <div class="col-md-6 col-sm-6">
+                                <ul class="social-footer list-unstyled list-inline pull-right">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-dropbox"></i></a></li>
+                                </ul>
+                            </div>
+                            <!-- END PAYMENTS -->
+                        </div>
+                    </div>
+                </div>
+                <!-- END FOOTER -->
+                @Scripts.Render("~/bundles/jquery")
+                @Scripts.Render("~/bundles/bootstrap")
+                @RenderSection("scripts", required: false)
+                <!-- Load javascripts at bottom, this will reduce page load time -->
+                <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
+                <!--[if lt IE 9]>
+                <script src="~/Content/assets/global/plugins/respond.min.js"></script>
+                <![endif]-->
+                <script src="~/Content/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+                <script src="~/Content/assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+                <script src="~/Content/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+                <script src="~/Content/assets/frontend/layout/scripts/back-to-top.js" type="text/javascript"></script>
+                <!-- END CORE PLUGINS -->
+                <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
+                <script src="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
+                <script src="~/Content/assets/global/plugins/carousel-owl-carousel/owl-carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+                <!-- BEGIN RevolutionSlider -->
+
+                <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
+                <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
+                <script src="~/Content/assets/frontend/pages/scripts/revo-slider-init.js" type="text/javascript"></script>
+                <!-- END RevolutionSlider -->
+                <script src="~/Content/assets/frontend/layout/scripts/layout.js" type="text/javascript"></script>
+                <script type="text/javascript">
+                    jQuery(document).ready(function () {
+                        Layout.init();
+                        Layout.initOWL();
+                        RevosliderInit.initRevoSlider();
+                        Layout.initTwitter();
+                        //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
+                        //Layout.initNavScrolling();
+                    });
+                </script>
 </body>
 
 </html>
