--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -1,81 +1,93 @@
 ﻿@model IEnumerable<MVC5.Models.Transaction>
+@using MVC5.Common
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="content-page">
+    <div class="row">
+        <div class="col-md-6">
+            <!-- BEGIN SAMPLE TABLE PORTLET-->
+            <div class="portlet box red">
+                <div class="portlet-title">
+                    <div class="caption">
+                        <i class="fa fa-cogs"></i>Transaksi Point
+                    </div>
+                    <div class="tools">
+                        <a href="javascript:;" class="collapse">
+                        </a>
+                        <a href="#portlet-config" data-toggle="modal" class="config">
+                        </a>
+                        <a href="javascript:;" class="reload">
+                        </a>
+                        <a href="javascript:;" class="remove">
+                        </a>
+                    </div>
+                </div>
+                <div class="portlet-body">
+                    <div class="table-scrollable">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
 
-<div class="col-md-6">
-    <!-- BEGIN SAMPLE TABLE PORTLET-->
-    <div class="portlet box red">
-        <div class="portlet-title">
-            <div class="caption">
-                <i class="fa fa-cogs"></i>Transaksi Point
-            </div>
-            <div class="tools">
-                <a href="javascript:;" class="collapse">
-                </a>
-                <a href="#portlet-config" data-toggle="modal" class="config">
-                </a>
-                <a href="javascript:;" class="reload">
-                </a>
-                <a href="javascript:;" class="remove">
-                </a>
-            </div>
-        </div>
-        <div class="portlet-body">
-            <div class="table-scrollable">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            
-                            <th>
-                                Registerer ID
-                            </th>
-                            <th>
-                                point
-                            </th>
-                            <th>
-                                Status
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        
+                                    <th>
+                                        Registerer ID
+                                    </th>
+                                    <th>
+                                        point
+                                    </th>
+                                    <th>
+                                        Status
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CustomerID)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.point)
-                                </td>
-                                <td>
-                                    @if (item.statusActive)
-                                    {
-                                        <span class="label label-sm label-success">
-                                            Active
-                                        </span>
-                                    }
-                                    else
-                                    {
-                                        <span class="label label-sm label-danger">
-                                            Not Active
-                                        </span>
-                                    }
-                                </td>
-                            </tr>
-                        }
-                       
-                        
-                       
-                    </tbody>
-                </table>
+
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.CustomerID)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.point)
+                                        </td>
+                                        <td>
+                                            @if (item.statusActive)
+                                            {
+                                                <span class="label label-sm label-success">
+                                                    Active
+                                                </span>
+                                            }
+                                            else
+                                            {
+                                                <span class="label label-sm label-danger">
+                                                    Not Active
+                                                </span>
+                                            }
+                                        </td>
+                                    </tr>
+                                }
+
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
+            <!-- END SAMPLE TABLE PORTLET-->
+
         </div>
     </div>
-    <!-- END SAMPLE TABLE PORTLET-->
-</div>
+    <div class="row">
+        <div class="col-md-6">
+            <a href="@MyConstant.Base_Url/Manage/Index" class="btn blue">
+                Back to My Account
+            </a>
+        </div>
+    </div>
+    </div>
