update front layout

--- a/Views/Shared/_Layout2.cshtml
+++ b/Views/Shared/_Layout2.cshtml
@@ -49,6 +49,7 @@ License: You must have a valid license purchased only from themeforest (the abov
     <link href="~/Content/assets/frontend/onepage/css/themes/red.css" rel="stylesheet" id="style-color">
     <link href="~/Content/assets/frontend/onepage/css/custom.css" rel="stylesheet">
     <!-- Theme styles END -->
+    <link href="~/Content/nadi.css" rel="stylesheet" />
 </head>
 <!--DOC: menu-always-on-top class to the body element to set menu on top -->
 <body>
