--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
     <!-- BEGIN HEADER -->
     <div class="header">
         <div class="container">
-            <a class="site-logo" href="@MyConstant.Base_Url"><img src="~/Content/assets/frontend/layout/img/logos/logo-corp-red.png" alt="Metronic FrontEnd"></a>
+            <a class="site-logo" href="@MyConstant.Base_Url"><img src="~/Content/img/nadilogo.png" style="width:32px; height:32px;" alt="Metronic FrontEnd"></a>
             <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
             <!-- BEGIN NAVIGATION -->
             <div class="header-navigation pull-right font-transform-inherit">
