--- a/Views/Shared/_Layout2.cshtml
+++ b/Views/Shared/_Layout2.cshtml
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest (the abov
 <!-- Head BEGIN -->
 <head>
     <meta charset="utf-8">
-    <title>Metronic One Page</title>
+    <title>@ViewBag.Title - Nadikebangsaan.com</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content="Metronic Shop UI description" name="description">
@@ -30,7 +30,7 @@ License: You must have a valid license purchased only from themeforest (the abov
     <meta property="og:type" content="website">
     <meta property="og:image" content="-CUSTOMER VALUE-"><!-- link to image for socio -->
     <meta property="og:url" content="-CUSTOMER VALUE-">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="~/Content/img/favicon.ico">
     <!-- Fonts START -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Pathway+Gothic+One|PT+Sans+Narrow:400+700|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
     <!-- Fonts END -->
@@ -88,7 +88,7 @@ License: You must have a valid license purchased only from themeforest (the abov
             <div class="row">
                 <!-- BEGIN COPYRIGHT -->
                 <div class="col-md-6 col-sm-6">
-                    <div class="copyright">2014 © Metronic One Page. ALL Rights Reserved.</div>
+                    <div class="copyright">© @DateTime.Now.Year - Nadikebangsaan.com</div>
                 </div>
                 <!-- END COPYRIGHT -->
                 <!-- BEGIN SOCIAL ICONS -->
