--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -44,11 +44,11 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Daftar Sebagai Ahli", "Register")
                 </p>
 
                 <p>
-                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    @Html.ActionLink("Terlupa Kata Laluan?", "ForgotPassword")
                 </p>
                 </div>
             </div>
