--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -136,20 +136,27 @@
                             <!-- BEGIN BOTTOM ABOUT BLOCK -->
                             <div class="col-md-4 col-sm-6 pre-footer-col">
                                 <h2>About us</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam sit nonummy nibh euismod tincidunt ut laoreet dolore magna aliquarm erat sit volutpat.</p>
-
+                                <p>Pertubuhan Pembangunan Intergeriti Malaysia [PPM-018-10-27022016] (National Association Development Integrity) </p>
+                                <p>
+                                    Dikenali sebagai  NADI Kebangsaan. Sebuah Pertubuhan
+                                    (NGO) Berdaftar beroreantasikan aktiviti Keusahawan, Reakreasi, Latihan, Sukan dan Kebajikan.
+                                </p>
                             </div>
                             <!-- END BOTTOM ABOUT BLOCK -->
                             <!-- BEGIN BOTTOM CONTACTS -->
                             <div class="col-md-4 col-sm-6 pre-footer-col">
                                 <h2>Our Contacts</h2>
-                                <address class="margin-bottom-40">
+                                @*<address class="margin-bottom-40">
                                     35, Lorem Lis Street, Park Ave<br>
                                     California, US<br>
                                     Phone: 300 323 3456<br>
                                     Fax: 300 323 1456<br>
-                                    Email: <a href="mailto:info@metronic.com">info@metronic.com</a><br>
-                                    Skype: <a href="skype:metronic">metronic</a>
+                                    Email: <a href="mailto:info@nadikebangsaan.com">info@nadikebangsaan.com</a><br>
+                                    Tel: <a href="#">0108620466</a>
+                                </address>*@
+                                <address class="margin-bottom-40">
+                                    Email: <a href="mailto:info@nadikebangsaan.com">info@nadikebangsaan.com</a><br>
+                                    Tel: <a href="#">0108620466</a>
                                 </address>
 
                             </div>
