--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Log in" class="btn btn-default" />
+                <input type="submit" value="Log Masuk" class="btn green btn-lg" />
             </div>
         </div>
         <div class="form-group">
