--- a/Views/Shared/_Layout2.cshtml
+++ b/Views/Shared/_Layout2.cshtml
@@ -131,9 +131,11 @@ License: You must have a valid license purchased only from themeforest (the abov
     <!-- Core plugins END (required only for current page) -->
     <!-- Global js BEGIN -->
     <script src="~/Content/assets/frontend/onepage/scripts/layout.js" type="text/javascript"></script>
+    <script src="~/Content/assets/admin/pages/scripts/ui-alert-dialog-api.js"></script>
     <script>
     $(document).ready(function() {
-      Layout.init();
+        Layout.init();
+        UIAlertDialogApi.init();
     });
     </script>
     <!-- Global js END -->
