--- a/Views/Manage/ApplyMembership.cshtml
+++ b/Views/Manage/ApplyMembership.cshtml
@@ -5,13 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Mohon Keahlian</h2>
 @using (Html.BeginForm("ApplyMembership", "Manage", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Student</h4>
+        <h4>Muat Naik Resit Bayaran</h4>
+@if (Model.Files.Any(f => f.FileType == FileType.Avatar))
+{
+        <div class="alert alert-info">
+            <strong>Info!</strong> Permohonan Anda Telah Diterima Dan Akan Diproses Oleh Admin Bagi Kelulusan.
+        </div>
+}
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -19,28 +25,40 @@
         @if (Model.Files.Any(f => f.FileType == FileType.Avatar))
         {
             <div class="form-group">
-                <span class="control-label col-md-2"><strong>Current Avatar</strong></span>
+                <span class="control-label col-md-2"><strong>Resit Bayaran</strong></span>
                 <div class="col-md-10">
-                    <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.Avatar).FileId" alt="avatar" />
+                    <img src="~/File?id=@Model.Files.First(f => f.FileType == FileType.Avatar).FileId" alt="avatar" height="100" width="200" />
                 </div>
             </div>
         }
+            <div class="form-group">
+                @Html.Label("Muat Naik Resit Bayaran", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <input type="file" id="Avatar" name="ic" />
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.Label("Avatar", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" id="Avatar" name="ic" />
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <span class="label label-danger">
+                        NOTE!
+                    </span>
+                    Fail hendaklah dalam bentuk format gambar
+                    <br />
+                    <br />
+                    <input type="submit" value="Muat Naik Dan Mohon Keahlian" class="btn green btn-lg" />
+
+                </div>
+
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    @Html.ActionLink("Kembali Ke Akaun", "Index")
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    
 </div>
