--- a/Views/Manage/ApplyMembership.cshtml
+++ b/Views/Manage/ApplyMembership.cshtml
@@ -38,6 +38,13 @@
                 </div>
             </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.tarikhPenginapan, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.tarikhPenginapan, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <span class="label label-danger">
