update message and transaction read

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -110,6 +110,10 @@
                         <li>
                             @Html.ActionLink("Membership Request", "MembershipRequest", "Transaction", new { area = "" }, null)
                         </li>
+                        <li>
+                            @Html.ActionLink("Claim Request", "ClaimRequestList", "Transaction", new { area = "" }, null)
+                        </li>
+                        
 
                     }
 
