--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -159,15 +159,11 @@
                             <!-- BEGIN BOTTOM CONTACTS -->
                             <div class="col-md-4 col-sm-6 pre-footer-col">
                                 <h2>Our Contacts</h2>
-                                @*<address class="margin-bottom-40">
-                                    35, Lorem Lis Street, Park Ave<br>
-                                    California, US<br>
-                                    Phone: 300 323 3456<br>
-                                    Fax: 300 323 1456<br>
-                                    Email: <a href="mailto:info@nadikebangsaan.com">info@nadikebangsaan.com</a><br>
-                                    Tel: <a href="#">0108620466</a>
-                                </address>*@
                                 <address class="margin-bottom-40">
+                                    No. 99-1,<br>
+                                    Jalan LP 7/2, <br>
+                                    Bandar Putra Permai,<br>
+                                    43300, Seri Kembangan.<br>
                                     Email: <a href="mailto:info@nadikebangsaan.com">info@nadikebangsaan.com</a><br>
                                     Tel: <a href="#">0108620466</a>
                                 </address>
