update last meeting

--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -152,6 +152,7 @@
                 <h4 class="block">Manfaat Keahlian Hanya Bagi Ahli Sah Nadi Kebangsaan.</h4>
                 <a href="/Manage/ApplyMembership"><i class="fa fa-tags"></i>Sila Klik Untuk Permohonan Keahlian</a>
                 </div>
+            @*@Html.Partial("_MembershipFormPartial")*@
             </div>
                 }
                 @if (Model.CurrentUser.EmailConfirmed)
