update maklumat bank

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -116,7 +116,7 @@
                 <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="item nadi-background-orange">
                         <strong>Web</strong>
-                        Ruang Slot Pengkiklanan
+                        Ruang Slot Pengiklanan
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-6">
